--- a/Discord-SelfBot-master (1)/Discord-SelfBot-master/config/config.json
+++ b/Discord-SelfBot-master (1)/Discord-SelfBot-master/config/config.json
@@ -1,6 +1,6 @@
 {
-  "token": "NjI5MDQzNDI2Mjk3NjQzMDA5.Xfu56Q.sjZt5qwedFsDlZe-kHzzPWtzwH4",
-  "ownerID": "629043426297643009",
+  "token": "mfa.AQ8zwT_WhAp_q1Nrdesdpjw6EjejZDaWZJWltFIbIufh34fHfTgiWhiFD6yGtWPwAe_23duvn3SIxgCvksUw",
+  "ownerID": "763658180738678794",
   "prefix": "!",
   "rotatePlayingGame": true,
   "rotatePlayingGameTime" : 150000,
